bug fixes and enhancements
