# routes/api.js
@@ -8,7 +8,8 @@ const {
     connectionStatus,
     logout,
     updateContacts,
-    savedContacts
+    savedContacts,
+    poll
  } = require('../controllers/_whatsapp.js');
 
  const { 
@@ -23,6 +24,7 @@ router.post('/authclient', authClient);
 router.get('/getcontacts', getContacts);
 router.get('/connectionstatus', connectionStatus);
 router.get('/logout', logout);
+router.get('/poll', poll);
 router.get('/savedcontacts', savedContacts);
 router.put('/updatecontacts', updateContacts);
 
